# mnist-recognition

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
src/api/: app.py
src/batch/: batch_inference.py
src/data/: loader.py  preprocessing.py
src/evaluation/: evaluator.py
src/features/: feature_store.py
src/logging/: logger.py
src/models/: architecture.py  inference.py  trainer.py
src/monitoring/: monitor.py
src/pipelines/: batch_pipeline.py  training_pipeline.py
src/utils/: config.py
